--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,3 +19,6 @@
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 </IfModule>
+<IfModule dir_module>
+    DirectoryIndex index.html index.php
+</IfModule>
