--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,7 +6,7 @@
     RewriteEngine On
     RewriteBase /
     DirectoryIndex index.php # This line does the trick
-
+    
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)/$ /$1 [L,R=301]
@@ -26,7 +26,7 @@
 <IfModule dir_module>
     DirectoryIndex index.html index.php
 </IfModule>
-<Directory /var/www/gloops/public>
+<Directory "/var/www/html/laravel/public">
         Options Indexes FollowSymLinks
         AllowOverride mod_rewrite mod_mime
         Require all granted
