--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,7 +4,7 @@
     </IfModule>
 
     RewriteEngine On
-    RewriteBase 
+    RewriteBase /
     DirectoryIndex index.php # This line does the trick
     
     # Redirect Trailing Slashes If Not A Folder...
