Trying to make routes work in prodution

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,14 +4,11 @@
     </IfModule>
 
     RewriteEngine On
-    RewriteBase /
-    DirectoryIndex index.php # This line does the trick
-    
-    # Redirect Trailing Slashes If Not A Folder...
+    RewriteBase /laravel
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)/$ /$1 [L,R=301]
 
-    # Handle Front Controller...
+   
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
      RewriteRule ^(.*)$ public/$1 [L]
