--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,15 +3,11 @@
         Options -MultiViews
     </IfModule>
 
-    RewriteEngine On
-    RewriteBase /laravel
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)/$ /$1 [L,R=301]
-
-   
+    RewriteBase /
+    RewriteEngine On   
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-     RewriteRule ^(.*)$ public/$1 [L]
+    RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
